# LetRecovery

./: .gitignore  README.md  README_en.md  TESTING.md
.github/workflows/: build-and-release.yml  pr-build.yml  update-package.yml
PE端/: Cargo.toml  build.rs
PE端/src/: app.rs  main.rs
PE端/src/core/: account_fix.rs  bcdedit.rs  config.rs  disk.rs  dism.rs  mod.rs  wimlib.rs
lr-core/: Cargo.toml
lr-core/src/: image_meta.rs  registry.rs  wimlib.rs
官网/: .gitignore  eslint.config.js  package.json  vite.config.ts
官网/src/: App.tsx
官网/src/components/ui/: sidebar.tsx
官网/src/pages/: License.tsx
正常系统端/: Cargo.toml  build.rs
正常系统端/src/: app.rs  main.rs
正常系统端/src/core/: app_config.rs  fveapi.rs  hardware_info.rs  image_verify.rs  install_config.rs  wimlib.rs
正常系统端/src/download/: config.rs
正常系统端/src/ui/: about.rs  advanced_options.rs  download_progress.rs  easy_mode.rs  install_progress.rs  system_backup.rs  system_install.rs
正常系统端/src/ui/tools/: actions.rs  bitlocker.rs  dialogs.rs  mod.rs  password_reset.rs  quick_partition.rs
正常系统端/src/utils/: encoding.rs  logger.rs  mod.rs
