[package]
name = "lr-core"
version = "2026.2.6"
edition = "2021"
authors = ["NORMAL-EX"]
description = "LetRecovery 两端共享的核心库（逐步收纳重复模块）"

[dependencies]
log = "0.4"
libloading = "0.8"
anyhow = "1"
encoding_rs = "0.8"
roxmltree = "0.20"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_Threading",
] }

[lib]
name = "lr_core"
path = "src/lib.rs"
